# kosmos

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
aoi/: Cargo.toml
aoi/src/: lib.rs  main.rs  parser.rs  postamt.rs  request.rs  store.rs
bangumi/: Cargo.toml
github_release/: Cargo.toml
github_release/src/: main.rs  postamt.rs  release.rs  target.rs
kosmos/: Cargo.toml
kosmos/src/: cell.rs  client.rs  cron.rs  lib.rs  planet.rs  plugin.rs  server.rs  utils.rs
kosmos/src/xeno/: client.rs
sora/: Cargo.toml
sora/src/: main.rs  telegram.rs
supercell/: Cargo.toml
terminus/: Cargo.toml
terminus/src/: main.rs
tests/yukikaze_test/: Cargo.toml
tests/yukikaze_test/src/: main.rs
tests/yukikaze_test2/: Cargo.toml
tests/yukikaze_test2/src/: main.rs
yukikaze/: .env.example  Cargo.toml
yukikaze/src/: ask.rs  bot.rs  lib.rs  main.rs  postamt.rs  request.rs
