[package]
name = "aoi"
version = "0.1.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kosmos = { path = "../kosmos" }
anyhow = "1.0.26"
yukikaze = { path = "../yukikaze" }
lazy_static = "1.4.0"
sled = "0.31.0"
bincode = "1.2.1"
structopt = "0.3.9"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]
