[package]
name = "github_release"
version = "0.1.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kosmos = { path = "../kosmos" }
anyhow = "1.0.28"
thiserror = "1.0.16"
yukikaze = { path = "../yukikaze" }
sled = "0.31.0"
once_cell = "1.3.1"
bincode = "1.2.1"
surf = "1.0.3"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]

[dependencies.serde]
version = "1.0.108"
features = ["derive"]
