[package]
name = "kosmos"
version = "0.2.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
thiserror = "1.0.18"
bincode = "1.2.1"
sled = "0.31.0"
async-trait = "0.1.31"
base64 = "0.12.1"
rand = "0.7.3"
log = "0.4.8"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes", "unstable"]

[dependencies.serde]
version = "1.0.110"
features = ["derive"]
