[package]
name = "kosmos"
version = "0.2.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
thiserror = "1.0.20"
bincode = "1.3.1"
sled = "0.31.0"
async-trait = "0.1.36"
base64 = "0.12.2"
rand = "0.7.3"
log = "0.4.11"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes", "unstable"]

[dependencies.serde]
version = "1.0.114"
features = ["derive"]
