[package]
name = "sora"
version = "0.1.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
tide = "0.7.0"
kosmos = { path = "../kosmos/" }
once_cell = "1.3.1"
yukikaze = { path = "../yukikaze/" }
anyhow = "1.0.28"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]

[dependencies.serde]
version = "1.0.106"
features = ["derive"]
