[package]
name = "yukikaze"
version = "0.3.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kosmos = { path = "../kosmos" }
anyhow = "1.0.29"
telegram_types = "0.5.0"
surf = "1.0.3"
thiserror = "1.0.17"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
once_cell = "1.4.0"
async-trait = "0.1.30"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]

[dependencies.serde]
version = "1.0.110"
features = ["derive"]
